--- a/RAL_technical_report/refs.bib
+++ b/RAL_technical_report/refs.bib
@@ -12,6 +12,13 @@
     publisher = "Pearson",
 }
 
+@book{dssivia2011,
+    author    = "D. S. Sivia",
+    title     = "Elementary Scattering Theory",
+    year      = "2011",
+    publisher = "OUP Oxford",
+}
+
 @manual{wshowells2010,
     author  = "W.S. Howells and V. Garcia-Sakai and F. Demmel and  M.T.F. Telling and F. Fernandez-Alonso",
     title   = "MODES User Guide, Version 3",
