--- a/RAL_technical_report/refs.bib
+++ b/RAL_technical_report/refs.bib
@@ -25,6 +25,95 @@
     year    = "2010",
 }
 
+@manual{wshowells1996,
+	author = "W.S. Howells",
+	title  = "IDA - IRIS Data Analysis",
+	year	   = "1996",
+}
+
+@manual{pradaelli2000ariel,
+	author = "Paolo G. Radaelli",
+	title  = "ARIEL Manual",
+	year	   = "2000",
+}
+
+@article{higgins1977observation,
+  title={Observation of quasi-elastic broadening in neutron scattering from polymer solutions},
+  author={Higgins, JS and Allen, G and Ghosh, RE and Howells, WS and Farnoux, B},
+  journal={Chemical Physics Letters},
+  volume={49},
+  number={2},
+  pages={197--202},
+  year={1977},
+  publisher={Elsevier}
+}
+
+@article{higgins1977q,
+  title={Q 4-dependent broadening in quasielastic incoherent neutron scattering from a polymer melt},
+  author={Higgins, JS and Ghosh, RE and Howells, WS and Allen, Geoffrey},
+  journal={Journal of the Chemical Society, Faraday Transactions 2: Molecular and Chemical Physics},
+  volume={73},
+  number={1},
+  pages={40--47},
+  year={1977},
+  publisher={Royal Society of Chemistry}
+}
+
+@article{wild1977measurement,
+  title={Measurement and analysis of fluorescence decay curves},
+  author={Wild, Urs P and Holzwarth, Alfred R and Good, Hans P},
+  journal={Review of Scientific Instruments},
+  volume={48},
+  number={12},
+  pages={1621--1627},
+  year={1977},
+  publisher={AIP Publishing}
+}
+
+@article{chudley1961neutron,
+  title={Neutron scattering from a liquid on a jump diffusion model},
+  author={Chudley, CT and Elliott, RJ},
+  journal={Proceedings of the Physical Society},
+  volume={77},
+  number={2},
+  pages={353},
+  year={1961},
+  publisher={IOP Publishing}
+}
+
+@article{hall1981incoherent,
+  title={Incoherent neutron scattering functions for random jump diffusion in bounded and infinite media},
+  author={Hall, Peter L and Ross, DK},
+  journal={Molecular Physics},
+  volume={42},
+  number={3},
+  pages={673--682},
+  year={1981},
+  publisher={Taylor \& Francis}
+}
+
+@article{teixeira1985experimental,
+  title={Experimental determination of the nature of diffusive motions of water molecules at low temperatures},
+  author={Teixeira, Jos{\'e} and Bellissent-Funel, M-C and Chen, Sow-Hsin and Dianoux, Albert-Jos{\'e}},
+  journal={Physical Review A},
+  volume={31},
+  number={3},
+  pages={1913},
+  year={1985},
+  publisher={APS}
+}
+
+@article{fick1855v,
+  title={V. On liquid diffusion},
+  author={Fick, Adolph},
+  journal={The London, Edinburgh, and Dublin Philosophical Magazine and Journal of Science},
+  volume={10},
+  number={63},
+  pages={30--39},
+  year={1855},
+  publisher={Taylor \& Francis}
+}
+
 @techreport{aksoper1989,
     author  	= "A. K. Soper and W. S. Howells and A. C. Hannon",
     title   	= "Analysis Of Time-of-flight Diffraction Data from Liquid And Amorphous Samples",
@@ -79,4 +168,75 @@
 	institution 	= "Rutherford Appleton Laboratory",
 	year			= "1974",
 	number		= "RL-74-103",
+}
+
+@article{mayers2004vesuvio,
+  title={VESUVIO - the double difference inverse geometry spectrometer at ISIS},
+  author={Mayers, J and Tomkinson, J and Abdul-Redah, T and Stirling, WG and Andreani, C and Senesi, R and Nardone, M and Colognesi, D and Degiorgi, E},
+  journal={Physica B: Condensed Matter},
+  volume={350},
+  number={1},
+  pages={E659--E662},
+  year={2004},
+  publisher={Elsevier}
+}
+
+@article{mayers2010user,
+  title={User guide to VESUVIO data analysis},
+  author={Mayers, J},
+  year={2010}
+}
+
+@article{colognesi2002tosca,
+  title={TOSCA neutron spectrometer: the final configuration},
+  author={Colognesi, D and Celli, M and Cilloco, F and Newport, RJ and Parker, SF and Rossi-Albertini, V and Sacchetti, F and Tomkinson, J and Zoppi, M},
+  journal={Applied Physics A},
+  volume={74},
+  number={1},
+  pages={s64--s66},
+  year={2002},
+  publisher={Springer}
+}
+
+@manual{adams2001iris,
+  title={The IRIS user guide},
+  author={Adams, MA and Howells, WS and Telling, MTF},
+  year={2001},
+  organization={Rutherford Appleton Laboratory UK}
+}
+
+@manual{telling2008osiris,
+  title={The OSIRIS user guide},
+  author={Telling, MTF and Andersen, KH},
+  organization={Rutherford Appleton Laboratory},
+  year={2008}
+}
+
+@manual{parker2003tosca,
+  title={The TOSCA user manual},
+  author={SF Parker, J Tomkinson, A J Ramirez-Cuesta and D Colognesi},
+  organization={Rutherford Appleton Laboratory},
+  year={2003}
+}
+
+@article{mayers2011calibration,
+  title={Calibration of an electron volt neutron spectrometer},
+  author={Mayers, J and Adams, MA},
+  journal={Nuclear Instruments and Methods in Physics Research Section A: Accelerators, Spectrometers, Detectors and Associated Equipment},
+  volume={625},
+  number={1},
+  pages={47--56},
+  year={2011},
+  publisher={Elsevier}
+}
+
+@article{schooneveld2006foil,
+  title={Foil cycling technique for the VESUVIO spectrometer operating in the resonance detector configuration},
+  author={Schooneveld, EM and Mayers, J and Rhodes, NJ and Pietropaolo, A and Andreani, C and Senesi, R and Gorini, G and Perelli-Cippo, E and Tardocchi, M},
+  journal={Review of scientific instruments},
+  volume={77},
+  number={9},
+  pages={095103},
+  year={2006},
+  publisher={AIP Publishing}
 }
